# elpv-dataset

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: linux.yml
src/elpv_dataset/: __about__.py  __init__.py  utils.py
src/elpv_dataset/data/: labels.csv
tests/: test_reader.py
utils/: elpv_reader.py
